--- a/app/src/main/res/layout/activity_calculate.xml
+++ b/app/src/main/res/layout/activity_calculate.xml
@@ -5,153 +5,150 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login"
-    tools:context=".Calculate">
-
+    android:background="@drawable/cal"
+    tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textView7"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="363dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="50dp"
-        android:text="BMI Calculator"
-        android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="@color/black"
-        android:textSize="40dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/Height"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/easy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="11dp"
+        android:layout_marginBottom="45dp"
+        android:text="Easy Way"
+        android:textColor="@color/white"
+        android:textSize="12pt"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toTopOf="@+id/BMI"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
-    <EditText
-        android:id="@+id/heightInput"
-        android:layout_width="0dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="68dp"
-        android:layout_marginTop="13dp"
-        android:layout_marginEnd="68dp"
-        android:background="@drawable/edittext_background"
-        android:ems="10"
-        android:hint="184"
-        android:inputType="numberDecimal"
-        android:paddingStart="10dp"
-        android:textSize="20sp"
+    <TextView
+        android:id="@+id/BMI"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="43dp"
+        android:text="BMI Calculater"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="20.7pt"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Height" />
+        app:layout_constraintTop_toBottomOf="@+id/easy" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginBottom="21dp"
+        android:text="Weight (kg)"
+        android:textColor="@color/black"
+        android:textSize="11pt"
+        app:layout_constraintBottom_toTopOf="@+id/weightInput"
+        app:layout_constraintStart_toStartOf="@+id/weightInput"
+        app:layout_constraintTop_toBottomOf="@+id/BMI" />
 
     <EditText
         android:id="@+id/weightInput"
         android:layout_width="0dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="68dp"
-        android:layout_marginTop="142dp"
-        android:layout_marginEnd="68dp"
-        android:layout_marginBottom="144dp"
-        android:background="@drawable/edittext_background"
-        android:ems="10"
-        android:hint="85"
-        android:inputType="numberDecimal"
-        android:paddingStart="10dp"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/calculateButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Height" />
-
-
-    <TextView
-        android:id="@+id/Height"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
-        android:text="Height"
-        app:layout_constraintBottom_toTopOf="@+id/cm"
-        app:layout_constraintStart_toStartOf="@+id/heightInput"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
-
-    <TextView
-        android:id="@+id/Weight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
-        android:text="Weight"
-        app:layout_constraintBottom_toTopOf="@+id/kg"
-        app:layout_constraintStart_toStartOf="@+id/weightInput"
-        app:layout_constraintTop_toBottomOf="@+id/cm" />
-
-    <TextView
-        android:id="@+id/cm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="9dp"
-
-        android:layout_marginBottom="66dp"
-        android:text="CM"
-        android:textSize="5pt"
-        app:layout_constraintBottom_toTopOf="@+id/Weight"
-        app:layout_constraintEnd_toEndOf="@+id/heightInput"
-        app:layout_constraintTop_toBottomOf="@+id/Height" />
-
-    <TextView
-        android:id="@+id/kg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="9dp"
-        android:layout_marginBottom="85dp"
-        android:text="KG"
-        android:textSize="5pt"
-        app:layout_constraintBottom_toTopOf="@+id/calculateButton"
-        app:layout_constraintEnd_toEndOf="@+id/weightInput"
-        app:layout_constraintTop_toBottomOf="@+id/Weight" />
-
-    <Button
-        android:id="@+id/calculateButton"
-        android:layout_width="192dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="71dp"
-        android:text="Calculate"
-        android:textSize="30sp"
-        android:textStyle="italic"
-        app:backgroundTint="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="41dp"
+        android:layout_marginEnd="41dp"
+        android:layout_marginBottom="34dp"
+        android:hint="Enter your weight"
+        android:inputType="numberDecimal"
+        android:padding="12dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/kg" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
-    <TextView
-        android:id="@+id/txtResult"
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:text=""
-        android:textColor="#000000"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/back_arrow"
+        android:layout_marginTop="7dp"
+        android:layout_marginBottom="18dp"
+        android:src="@drawable/logo"
+        app:layout_constraintBottom_toTopOf="@+id/easy"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/back_arrow"
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginBottom="24dp"
+        android:text="Height (cm)"
+        android:textColor="@color/black"
+        android:textSize="11pt"
+        app:layout_constraintBottom_toTopOf="@+id/heightInput"
+        app:layout_constraintStart_toStartOf="@+id/heightInput"
+        app:layout_constraintTop_toBottomOf="@+id/weightInput" />
+
+    <EditText
+        android:id="@+id/heightInput"
         android:layout_width="0dp"
-        android:layout_height="74dp"
-        android:layout_marginEnd="363dp"
-        android:clickable="true"
-        android:contentDescription="رجوع"
-        android:focusable="true"
-        android:src="@drawable/arrow_ba"
+        android:layout_height="0dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="286dp"
+        android:hint="Enter your height"
+        android:inputType="numberDecimal"
+        android:padding="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/txtResult"
-        app:layout_constraintTop_toTopOf="@+id/txtResult"
-        app:tint="@android:color/white"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+    <Button
+        android:id="@+id/calculateButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="649dp"
+        android:layout_marginBottom="90dp"
+        android:backgroundTint="@color/dark"
+        android:ems="50"
+        android:text="Calculate BMI"
+        android:textSize="30sp"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toTopOf="@+id/profile"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/txtResult"
+        android:layout_width="267dp"
+        android:layout_height="49dp"
+        android:layout_marginStart="74dp"
+        android:layout_marginEnd="74dp"
+        android:layout_marginBottom="135dp"
+        android:hint="Result"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="11pt"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calculateButton" />
+
+    <Button
+        android:id="@+id/profile"
+        android:layout_width="145dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="53dp"
+        android:backgroundTint="@color/dark"
+        android:text="Profile"
+        android:textSize="30sp"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calculateButton" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-
